[package]
name = "hyper-rustls"
version = "0.1.0"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
license = "MIT"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["logging", "tls12", "server"]

server = ["hyper/server"]

logging = ["tokio-rustls/logging"]
tls12 = ["tokio-rustls/tls12"]
early-data = ["tokio-rustls/early-data"]

[dependencies]
hyper = { version = "0.14", default-features = false, features = ["runtime"] }
tokio = { version = "1", default-features = false }
tokio-rustls = { version = "0.23", default-features = false }
rustls-pemfile = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
hyper = { version = "0.14", features = ["http1", "http2", "server", "runtime"] }
